# rar-public-chatbot

./: .gitignore  Dockerfile  LICENSE  pyproject.toml  rar-information.txt
.devcontainer/: devcontainer.json
app/: chain.py  server.py
app/chroma_db/: chroma.sqlite3
chroma_db/: chroma.sqlite3
